--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         -webkit-text-size-adjust: 100%;
         text-size-adjust: 100%;
       }
+      :root {
+        --safe-top: env(safe-area-inset-top, 0px);
+        --safe-bottom: env(safe-area-inset-bottom, 0px);
+      }
     </style>
   </head>
   <body>
