--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=%VITE_NAVER_MAP_CLIENT_ID%&submodules=geocoder"
-      defer
-    ></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_KAKAO_MAP_JS_KEY%&libraries=services&autoload=false"></script>
   </body>
 </html>
